--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
     <hr>
     <input type="text" placeholder="Learn C++" class="box222"/>
     <br>
-    <button class="button2">+ Add Task</button>
+    <a href="./index3.html"><button class="button2">+ Add Task</button></a>
     </div>
     
     
