--- a/index4.html
+++ b/index4.html
@@ -31,7 +31,7 @@
         <hr>
         <input type="text" placeholder="Visit Famous Places" class="box222"/>
         <br>
-        <button class="button2">+ Add Task</button>
+         <a href="./index.html"><button class="button2">+ Add Task</button></a>
     </div> 
     
 </body>
